# heterogeneous-robotics

./: .directory  .gitignore  .gitmodules  README.md
logs/sim_ros_interface/: build.cmake.000.log.stderr
src/merged_brain/: CMakeLists.txt  README.md  package.xml
src/merged_brain/launch/: merged_brain.launch
src/merged_brain/msg/: RecruitUnit.msg
src/merged_brain/scripts/: brain_node.py  mir_functionality.py  ur_functionality.py
src/merged_brain/src/: merged_brain.cpp
src/merged_brain/srv/: get_action.srv
src/mir_interface/: CMakeLists.txt  README.md  package.xml
src/mir_interface/launch/: mir_interface.launch  mir_move.launch
src/mir_interface/src/: mir_interface_coppelia.cpp
src/mir_interface/srv/: action.srv  get_action.srv
src/test_move/: CMakeLists.txt  package.xml
src/test_move/src/: test_move.cpp
src/ur_move/: CMakeLists.txt  README.md  package.xml
src/ur_move/launch/: ur_move.launch
src/ur_move/src/: coppelia_interface.cpp  moveit_interface.cpp  ur_move.cpp
src/ur_move/srv/: get_action.srv  goto_point.srv  q.srv
